# nanoGPT

./: .gitignore  GPT.py  README.md  federated.py  play.ipynb  pyproject.toml  requirements.txt  train.py  train_gpt2.py
Andrej Karpathy's Implementation/: GPT.py  play.ipynb
Dataset/: html.txt  me.txt
Federated_Learning/: client.py  config.py  data_loader.py  data_utils.py  fl_client.py  fl_server.py  fl_utils.py  gpt_training.py  server.py
nanoGPT/: GPT.py  config.py  data_loader.py  dataset.py  model.py  transformer.py  utils.py
