[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.2.0",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cryptography==44.0.3",
    "cycler==0.12.1",
    "filelock==3.18.0",
    "flwr[simulation]>=1.8.0",
    "fonttools==4.56.0",
    "fsspec==2025.3.0",
    "grpcio==1.71.0",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "iterators==0.0.2",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pillow==11.1.0",
    "protobuf==4.25.7",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32==309",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "safetensors==0.5.3",
    "setuptools==76.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.13.1",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "tomli==2.2.1",
    "tomli-w==1.2.0",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "typer==0.12.5",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
]
